estamos corrigiendo la ortografía en el index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Concesionarios</a>
 			  <a class="dropdown-item" href="entradas.html">Campañas de Seguridad</a> <a class="dropdown-item" href="pastas.html">Ventas Corporativas</a> <a class="dropdown-item" href="criollos.html">Garantía</a> </div>
           </li>
-          <li class="nav-item"> <a class="nav-link" href="concesionario.html">Contactanos</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="concesionario.html">Contáctanos</a> </li>
         </ul>
       </div>
     </div>
@@ -42,7 +42,7 @@
               <div class="row justify-content-center">
                 <div class="col-10 col-md-5 col-xl-4 ">
                   <h1>La emoción crece en familia</h1>
-                  <p>Independiente de qué auto Chevrolet elijas,debes saber que rcibiras eficiencia excepcional, tecnología innovadora y espectacular seguridad</p>
+                  <p>Independiente de qué auto Chevrolet elijas,debes saber que recibirás eficiencia excepcional, tecnología innovadora y espectacular seguridad</p>
                   <p><a class="btn btn-dark" href="contactanos.html">Cotiza</a></p>
                   </div>
                 
@@ -56,7 +56,7 @@
               <div class="row justify-content-center">
                 <div class="col-10 col-md-5 col-xl-4 ">
                   <h1>La emoción crece en familia</h1>
-                  <p>Independiente de qué auto Chevrolet elijas,debes saber que rcibiras eficiencia excepcional, tecnología innovadora y espectacular seguridad.</p>
+                  <p>Independiente de qué auto Chevrolet elijas,debes saber que recibirás eficiencia excepcional, tecnología innovadora y espectacular seguridad.</p>
                   <p><a class="btn btn-dark" href="contactanos.html">Cotiza</a></p>
                   </div>
                 
