--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <section id="Contacto" class="fondo-imagen slider-2 blanco">
   <div class="jumbotron mb-0 bg-opacidad">
     <div class="container text-center">
-      <h2 class="display-4">CONTACTANOS</h2>
+      <h2 class="display-4">CONTÁCTANOS</h2>
       <p class="lead">Para Chevrolet tu seguridad y salud es lo más importante. Por eso te ofrecemos diversas opciones para  apoyarte y responder cualquier duda que tengas sobre tu vehículo o para ayudarte a cumplir tu sueño de tener tu nuevo Chevrolet.</p>
       <hr class="my-4 bd-linea">
       
@@ -303,7 +303,7 @@
 			 <p class="m-0">&copy;chevrolet 2021: Todos los derechos Reservados</p>
 		 </div>
 		 <div class="col-12 col-md-6 text-center">
-				<h2>FIND NEW ROADS</h2>
+				<h2>MAZDA RULES</h2>
 		 </div>
 			</div>
 
