corrigiendo la frase que alguien cambio (fui yo)

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			 <p class="m-0">&copy;chevrolet 2021: Todos los derechos Reservados</p>
 		 </div>
 		 <div class="col-12 col-md-6 text-center">
-				<h2>MAZDA RULES</h2>
+				<h2>FIND NEW ROADS</h2>
 		 </div>
 			</div>
 
